misc findbugs issues